# riscv-isa-sim

./: .gitignore  .gitlab-ci.yml  .travis.yml  ChangeLog.md  Makefile.in  README  README.md  README.processor_trace  VERSION  aclocal.m4  build.sh  config.h.in  configure  configure.ac  hello.c  regression  riscv-customext.pc.in  riscv-disasm.pc.in  riscv-fdt.pc.in  riscv-fesvr.pc.in  riscv-hwacha.pc.in  riscv-pec.pc.in  riscv-riscv.pc.in  riscv-snapshot.pc.in  riscv-spike.pc.in  riscv-spike_main.pc.in  spike-ci.tar
a_tets_faruk/: crt.S  hello  hello-dump.s  hello-readelf.yaml  hello.c  hello.elf  hello.s  link.ld  makefile  syscalls.c  test.ld
block_dev/: block_test.cc  gen-dts.py
ci-tests/: .gitignore  atomics.c  build-spike  create-ci-binary-tarball  custom-csr.cc  customcsr.c  dummy-slliuw.c  generate-snippy-test.sh  generate-snippy-tests.sh  hello.c  run-snippy-test.sh  run-snippy-tests.sh  spike-ld.ld  test-customext.cc  test-spike  test-spiketama1s-ext.S  testlib.c  testlib.cc  vector-sum.c
customext/: agnostic.mk  agnostic_macros.h  cflush.cc  customext.mk.in  dummy_rocc.cc  spikema1s.cc  spiketa1s.cc  spiketama.cc  spiketama_insns.cc  spiketama_insns.h
day1/: first.jai  input.txt
debug_rom/: .gitignore  Makefile  debug_rom.S  debug_rom.c  debug_rom.h  debug_rom_defines.h  link.ld
difftest/: Makefile  README.md  difftest-def.h  difftest.cc  difftest.h  difftrace.h  dummy_debug.cc  dummy_debug.h  test.cc
disasm/: disasm.cc  disasm.mk.in  isa_parser.cc  regnames.cc
docker/: Dockerfile  build.sh
dummy_rocc/: dummy_rocc.mk.in
fdt/: fdt.c  fdt.mk.in  libfdt.h  libfdt_env.h
fesvr/: byteorder.h  context.cc  device.cc  device.h  dtm.cc  dtm.h  elf.h  elf2hex.cc  elfloader.cc  elfloader.h  fesvr.ac  fesvr.mk.in  htif.cc  htif.h  htif_hexwriter.cc  htif_hexwriter.h  htif_pthread.cc  htif_pthread.h  memif.cc  memif.h  option_parser.cc  option_parser.h  rfb.cc  rfb.h  syscall.cc  syscall.h  term.cc  tsi.cc  tsi.h
hwacha/: README  cvt16.cc  cvt16.h  decode_hwacha.h  decode_hwacha_ut.h  decode_hwacha_ut_half.h  disasm.cc  encodings_hwacha.h  hwacha.cc  hwacha.h  hwacha.mk.in  hwacha_disasm.cc  hwacha_xcpt.h  insn_template_hwacha.cc  insn_template_hwacha.h  insn_template_hwacha_ut.cc  insn_template_hwacha_ut.h  insn_template_hwacha_ut_half.cc  opcodes_hwacha.h  opcodes_hwacha_ut.h  opcodes_hwacha_ut_half.h
m4/: ax_boost_asio.m4
pec/: pec-opcode.h  pec.cc  pec.mk.in  qarma.cc  qarma.h  so-debug-log
picoc/: README  clibrary.c  ctype.c  errno.c  expression.c  heap.c  include.c  interpreter.h  lex.c  library_ffox.c  library_spike.c  library_srv1.c  library_surveyor.c  library_unix.c  math.c  parse.c  picoc.ac  picoc.c  picoc.h  picoc.mk.in  platform.c  platform.h  platform_ffox.c  platform_surveyor.c  platform_unix.c  stdbool.c  stdio.c  stdlib.c  string.c  table.c  test.c  time.c  type.c  unistd.c  variable.c
riscv/: MatrixAccelerator.cpp  MatrixAccelerator.h  MatrixAcceleratorMacros.h  abstract_device.h  abstract_interrupt_controller.h  aplic.cc  applink.cc  applink.h  arith.h  bbtracker.cc  bbtracker.h  blkdev.cc  bloom_filter.h  bulknormdot.h  byteorder.h  cachesim.cc  cachesim.h  cachesim_addr.cc  cachesim_addr.h  cachesim_perf_counter.cc  cachesim_perf_counter.h  cbbtype_decode_macros.h  cbtype_decode_macros.h  cfg.cc  cfg.h  check-opcode-overlap.t.cc  checkpoint.cc  checkpoint.h  cildtype_decode_macros.h  cilwtype_decode_macros.h  citype_decode_macros.h  ciwtype_decode_macros.h  cjtype_decode_macros.h  cldtype_decode_macros.h  clint.cc  clwtype_decode_macros.h  common.h  crc_dev.cc  crc_dev.h  crtype_decode_macros.h  (+150 more)
rvc/: README  rvc.h
rvv_kernels/: Makefile  dataset1.h  kr233-vector-pipeunroll.S  kr233-vector-softpipe.S  kr233-vector.S  kr233.c  kr33inv-vector-pipe.S  kr33inv-vector-unrollpipe.S  kr33inv-vector.S  kr33inv.c  kr636-vector-pipeunroll.S  kr636-vector-unroll.S  kr636-vector.S  kr636.c  saxpy.S  saxpy.c  sgemm.S
scripts/: vcs-version.sh
shared/: args_reader.cc  debug_header.h  shared.cc  shared_execute.cc  shared_sim.cc
snapshot/: ramdump.cc  snapshot.cc  snapshot.h  snapshot.mk.in
softfloat/: bf16_add.c  bf16_classify.c  bf16_cmp.c  bf16_div.c  bf16_mul.c  bf16_mulAdd.c  bf16_pacc.c  bf16_sqrt.c  bf16_sub.c  bf16_to_e4m3.c  bf16_to_e5m2.c  bf16_to_f32.c  bf16_to_f64.c  bf16_to_i32.c  bf16_to_i8.c  bf16_to_ui32.c  bf16_to_ui8.c  e4m3_to_bf16.c  e4m3_to_f16.c  e5m2_to_bf16.c  e5m2_to_f16.c  f128_add.c  f128_classify.c  f128_div.c  f128_eq.c  f128_eq_signaling.c  f128_isSignalingNaN.c  f128_le.c  f128_le_quiet.c  f128_lt.c  f128_lt_quiet.c  f128_mul.c  f128_mulAdd.c  f128_rem.c  f128_roundToInt.c  f128_sqrt.c  f128_sub.c  f128_to_f16.c  f128_to_f32.c  f128_to_f64.c  (+197 more)
softfloat_8/: bf16_to_f8_1.c  bf16_to_f8_1_old.c  bf16_to_f8_2.c  bf16_to_f8_2_old.c  bf16_to_i8.c  bf16_to_ui8.c  f8_1_2_recip7_rsqrte7.c  f8_1_add.c  f8_1_classify.c  f8_1_div.c  f8_1_eq.c  f8_1_le.c  f8_1_lt.c  f8_1_lt_quiet.c  f8_1_max_min.c  f8_1_mul.c  f8_1_mulAdd.c  f8_1_sqrt.c  f8_1_sub.c  f8_1_to_bf16.c  f8_1_to_f8_2.c  f8_1_to_i16.c  f8_1_to_i32.c  f8_1_to_i8.c  f8_1_to_ui16.c  f8_1_to_ui32.c  f8_1_to_ui8.c  f8_2_add.c  f8_2_classify.c  f8_2_div.c  f8_2_eq.c  f8_2_le.c  f8_2_lt.c  f8_2_lt_quiet.c  f8_2_max_min.c  f8_2_mul.c  f8_2_mulAdd.c  f8_2_sqrt.c  f8_2_sub.c  f8_2_to_bf16.c  (+37 more)
tests/: debug.c  (+15 more)
(+3755 files in other folders)
